# radex-test-task

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp  random-number.cpp  random-number.h
include/cadex/: circle.h  curves.h  ellipsis.h  helix.h  parametric.h
src/: CMakeLists.txt  circle.cpp  ellipsis.cpp  helix.cpp
